Fixed project alignment

--- a/src/style.css
+++ b/src/style.css
@@ -175,20 +175,26 @@ html, body {
     .center-content {
         grid-column: 1/2;
         grid-template-rows: 5rem 40rem 1px 3rem 65rem 1px 3rem auto 1px 3rem auto;
+        padding-left: 0rem;
+        padding-right: 0rem;
 
     }
     .subsection {
-        max-width: 80vw;
+        max-width: 100vw;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
     .name-and-pic {
         grid-template-columns: 1fr;
         width: 100%;
     }
+    .pic-of-me {
+        width: 90%;
+    }
     .projects {
         grid-template-columns: 1fr;
     }
     .projects > .project {
-        width: 85vw;
     }
     .header > div > a >  button {
         font-size: 1rem;
